# GWA-Calc

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp
src/: class.cpp  class.h  functions.cpp  functions.h  main  main.cpp
